--- a/lugang/res/values/strings.xml
+++ b/lugang/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="setting">设置</string>
     <string name="express">城际快线</string>
     <string name="company">物流企业</string>
-    <string name="carinfo">空车信息</string>
+    <string name="carinfo">车源信息</string>
     <string name="lastet">最新配货</string>
     <string name="billsearch">运单查询</string>
     <string name="notice">通知公告</string>
