--- a/lugang/res/values/strings.xml
+++ b/lugang/res/values/strings.xml
@@ -12,9 +12,10 @@
     <string name="tab4">出库</string>
     <string name="setting">设置</string>
     <string name="express">城际快线</string>
+    <string name="between">==</string>
     <string name="company">物流企业</string>
     <string name="carinfo">车源信息</string>
-    <string name="lastet">最新配货</string>
+    <string name="lastet">配货信息</string>
     <string name="billsearch">运单查询</string>
     <string name="notice">通知公告</string>
     <string name="singlein">入库记录</string>
@@ -31,6 +32,7 @@
     <string name="arrivetime">到达时间</string>
     <string name="loginname">登录名:</string>
     <string name="group">用户组:</string>
+    <string name="record">流转记录</string>
 
     <!-- zxing -->
     <string name="app_picker_name">应用</string>
