--- a/lugang/res/values/strings.xml
+++ b/lugang/res/values/strings.xml
@@ -33,6 +33,10 @@
     <string name="loginname">登录名:</string>
     <string name="group">用户组:</string>
     <string name="record">流转记录</string>
+    <string name="yes">是</string>
+    <string name="no">否</string>
+    <string name="confirm">确认</string>
+    <string name="cancel">取消</string>
 
     <!-- zxing -->
     <string name="app_picker_name">应用</string>
